--- a/src/Components/02-NavBar/NavBar.module.css
+++ b/src/Components/02-NavBar/NavBar.module.css
@@ -14,6 +14,7 @@ nav{
     box-shadow: 0 2px 3px 0 rgba(0,0,0,.1);
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    user-select: none;
 }
 nav a{
     font-size: 15px;
