--- a/src/Components/01-Header/Header.module.css
+++ b/src/Components/01-Header/Header.module.css
@@ -5,22 +5,22 @@
 
 .div2{
     display: flex;
-    justify-content: center;
-    margin-top: -50px;
-    margin-left: -130px;
-}
-
-.hed{
-    font-size: 160px;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    margin-top: 20px;
+    width: 100%;
+    height: 50%;
+    font-size: 3vw;
     text-align: left;
 }
 
+
+
+
 .button1{
-    margin-top: 380px;
-    margin-left: -80px;
-    width: 200px;
-    height: 82px;
-    white-space: nowrap;
+    width: 15%;
+    height: 50%;
     background-color: #F9F9F9;
     border: none;
     border-radius: 80px;
@@ -35,6 +35,5 @@
     justify-content: space-evenly;
     white-space: wrap;
     text-align: left;
-    margin-top: -100px;
-    margin-left: -80px;
+    margin-top: 20px;
 }
