--- a/src/Components/02-NavBar/NavBar.module.css
+++ b/src/Components/02-NavBar/NavBar.module.css
@@ -27,43 +27,38 @@ nav a{
     display: inline-block;
     text-align: center;
 }
-nav .animation {
+.animation {
     position: absolute;
-    height: 5px;
-    top: 55px;
-    z-index: 0;
-    background: hsl(0, 0%, 100%);
+    width: 100px;
+    top: 8px;
+    height: 40px;
+    background-color: hsl(0, 0%, 100%);
     border-radius: 80px;
     transition: all 0.5s ease;
-    transform: translateY(0);
-  }
-  
-  nav a:hover~.animation {
-    height: 80%;
-    top: 5px;
-    transform: translateY(0);
-  }
-
-nav a:nth-child(1):hover~.animation{
-    color: black;
-    width: 110px;
-    left: 6px;
+    display: none;
 }
 
-nav a:nth-child(2):hover~.animation{
-    width: 110px;
-    left: 120px;
+.hovered1{
+    left: 8px;
+    display: block;
 }
 
-nav a:nth-child(3):hover~.animation{
-    width: 100px;
+.hovered2{
+    left: 125px;
+    display: block;
+}
+
+.hovered3{
     left: 245px;
+    display: block;
 }
 
-nav a:nth-child(4):hover~.animation{
-    width: 110px;
-    left: 355px;
+.hovered4{
+    width: 105px;
+    left: 358px;
+    display: block;
 }
+ 
 
 a:hover{
     font-weight: 600;
@@ -71,9 +66,4 @@ a:hover{
     transition: color 1s;
 }
 
-a:nth-child(1){
-    left: 0px;
-}
-a:nth-child(4){
-    left: 0px;
-}
+
