--- a/src/Components/02-NavBar/NavBar.module.css
+++ b/src/Components/02-NavBar/NavBar.module.css
@@ -5,9 +5,9 @@
 
 nav{
     position: relative;
-    margin: 32px auto 0;
-    width: 470px;
-    height: 56px;
+    margin-top: 32px;
+    width: 81vh;
+    height: auto;
     background: hsl(0, 0%, 0%);
     border-radius: 80px;
     font-size: 0;
