--- a/src/Components/01-Header/Header.module.css
+++ b/src/Components/01-Header/Header.module.css
@@ -19,8 +19,8 @@
 
 
 .button1{
-    width: 15%;
-    height: 50%;
+    width: 35%;
+    height: 10%;
     background-color: #F9F9F9;
     border: none;
     border-radius: 80px;
@@ -34,6 +34,6 @@
     display: flex;
     justify-content: space-evenly;
     white-space: wrap;
-    text-align: left;
+    text-align: center;
     margin-top: 20px;
 }
