--- a/src/Components/01-Header/Header.module.css
+++ b/src/Components/01-Header/Header.module.css
@@ -4,26 +4,27 @@
 }
 
 .div2{
-
     display: grid;
-    grid-template-columns: 5fr 1fr;
+    grid-template-columns: 1fr 0.5fr;
+    position: relative;
     margin-top: 20px;
     width: 100%;
     height: 50%;
     font-size: 7vw;
     text-align: left;
-    position: relative;
+}
+
+.hed{
+    margin-left: 50px;
 }
 
 
-
-
 .button1{
+    margin-left: 74%;
+    margin-top: 30%;
     position: absolute;
-    margin-top: 33%;
-    margin-left: 68%;
-    width: 30%;
-    height: 10%;
+    width: 20%;
+    height: 18%;
     background-color: #F9F9F9;
     border: none;
     border-radius: 80px;
@@ -31,6 +32,7 @@
     cursor: pointer;
     font-weight: 600;
     font-family: 'Muli', sans-serif;
+    white-space: nowrap;
 }
 
 .div3{
@@ -51,9 +53,19 @@
 /* CSS for devices under 500px */
 @media screen and (max-width: 500px) {
     /* Add your styles for devices under 500px here */
-    
+    .div2{
+        margin-bottom: 50px;
+    }
+
     .div3{
         display: block;
+    }
+
+    .button1{
+        margin-left: 60%;
+        margin-top: 50%;
+        width: auto;
+        height: 25%;
     }
 }
 
