--- a/src/Components/03-MidContent/MidContent.module.css
+++ b/src/Components/03-MidContent/MidContent.module.css
@@ -6,7 +6,7 @@
     text-align: left;
     margin-left: 50px;
     margin-right: 50px;
-    margin-bottom: 50px;
+    margin-bottom: 20px;
 }
 
 .pp{
@@ -36,8 +36,8 @@
     grid-gap: 5px;
     margin-bottom: 60px;
     text-align: left;
-    margin-left: 30px;
-    margin-right: 30px;
+    margin-left: 50px;
+    margin-right: 50px;
 }
 
 
@@ -45,3 +45,30 @@
     margin-top: -15px;
 }
 
+
+
+/* CSS for devices under 500px */
+@media screen and (max-width: 500px) {
+    /* Add your styles for devices under 500px here */
+    .div4{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+
+    .gridcontainer{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+
+    .gridcontainer2{
+        margin-left: 0px;
+        margin-right: 0px;
+    }
+}
+
+/* CSS for devices above 500px */
+@media screen and (min-width: 501px) {
+    /* Add your styles for devices above 500px here */
+    
+}
